##-------------BSP-------------##
#
#
project(stm-lora)
cmake_minimum_required(VERSION 3.6)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Components)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/I_NUCLEO_LRWAN1)



#Project
if(PROJECT STREQUAL B-L072Z-LRWAN1)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CMWX1ZZABZ-0xx)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/B-L072Z-LRWAN1)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LRWAN_NS1)

elseif(PROJECT STREQUAL B-L072Z-LRWAN1 AND NOT(APPLICATION STREQUAL AT))
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LRWAN_NS1)
elseif(PROJECT STREQUAL MIROMICO)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Miromico_drivers)
elseif(PROJECT STREQUAL STM32L053R8-Nucleo OR PROJECT STREQUAL STM32L073RZ-Nucleo)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/STM32L0xx_Nucleo)
elseif(PROJECT STREQUAL STM32L152RE-Nucleo)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/STM32L1xx_Nucleo)
elseif(PROJECT STREQUAL STM32L476RG-Nucleo)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/STM32L4xx_Nucleo)
endif()


#AT extension
if((APPLICATION STREQUAL AT AND PROJECT STREQUAL STM32L053R8-Nucleo) OR (APPLICATION STREQUAL AT AND PROJECT STREQUAL STM32L073RZ-Nucleo))
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/MDM32L07X01)
endif()

#Sensor Board
if(SENSOR_BOARD STREQUAL X_NUCLEO_IKS01A1 AND NOT(APPLICATION STREQUAL AT)) 
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/X_NUCLEO_IKS01A1)
elseif(SENSOR_BOARD STREQUAL X_NUCLEO_IKS01A2 AND NOT(APPLICATION STREQUAL AT))	
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/X_NUCLEO_IKS01A2)
endif()


#Radio
if(RADIO STREQUAL sx126x)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SX1261DVK1BAS)
#	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SX1262DVK1CAS)
#	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SX1262DVK1DAS)
	
elseif(RADIO STREQUAL sx1272)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SX1272MB2DAS)

elseif(RADIO STREQUAL sx1276)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SX1276MB1LAS)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SX1276MB1MAS)
endif()